Updated data cleaning script

--- a/snowfall_data_wrangling.ipynb
+++ b/snowfall_data_wrangling.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n"
+    "import os\n"
    ]
   },
   {
@@ -195,6 +195,163 @@
     "# Print or work with the DataFrame\n",
     "print(aggregated_snow_data)\n",
     "aggregated_snow_data.to_csv(\"cleaned.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the folder containing the CSV files\n",
+    "folder_path = \".\\montana_data_14_743_GoodStations\"\n",
+    "\n",
+    "# Define the required columns\n",
+    "required_columns = [\"STATION\", \"DATE\", \"NAME\", \"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]\n",
+    "\n",
+    "# Define the date range\n",
+    "start_date = \"2015-01-01\"\n",
+    "end_date = \"2024-12-31\"\n",
+    "\n",
+    "# List to store filtered dataframes\n",
+    "filtered_dfs = []\n",
+    "\n",
+    "# Loop through each file in the folder\n",
+    "for file in os.listdir(folder_path):\n",
+    "    if file.endswith(\".csv\"):  # Process only CSV files\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "\n",
+    "        # Read CSV while ensuring the DATE column is parsed as a datetime object\n",
+    "        df = pd.read_csv(file_path, parse_dates=[\"DATE\"], dtype=str)\n",
+    "\n",
+    "        # Keep only the required columns (if they exist)\n",
+    "        df = df[required_columns].copy()\n",
+    "\n",
+    "        # Filter rows within the date range\n",
+    "        df = df[(df[\"DATE\"] >= start_date) & (df[\"DATE\"] <= end_date)]\n",
+    "\n",
+    "        # Append filtered dataframe to the list\n",
+    "        filtered_dfs.append(df)\n",
+    "\n",
+    "# Concatenate all filtered dataframes into one (optional)\n",
+    "final_df = pd.concat(filtered_dfs, ignore_index=True)\n",
+    "final_df['DATE'] = pd.to_datetime(final_df['DATE'], format = '%b %d %Y') # Make sure dates are datetime\n",
+    "\n",
+    "# Save to a new CSV file (optional)\n",
+    "#final_df.to_csv(\"filtered_data.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary mapping station names to county names\n",
+    "station_to_county = {\n",
+    "    'BOZEMAN GALLATIN FIELD AIRPORT, MT US': 'GALLATIN',\n",
+    "    'GLASGOW INTERNATIONAL AIRPORT, MT US': 'VALLEY',\n",
+    "    'BUTTE BERT MOONEY AIRPORT, MT US': 'SILVER BOW',\n",
+    "    'CUT BANK AIRPORT, MT US': 'GLACIER',\n",
+    "    'LIVINGSTON AIRPORT, MT US': 'PARK',\n",
+    "    'HELENA AIRPORT ASOS, MT US': 'LEWISANDCLARK',\n",
+    "    'BILLINGS INTERNATIONAL AIRPORT, MT US': 'YELLOWSTONE',\n",
+    "    'MISSOULA INTERNATIONAL AIRPORT, MT US': 'MISSOULA',\n",
+    "    'LEWISTOWN AIRPORT, MT US': 'FERGUS',\n",
+    "    'GREAT FALLS AIRPORT, MT US': 'CASCADE',\n",
+    "    'MILES CITY AIRPORT, MT US': 'CUSTER',\n",
+    "    'KALISPELL GLACIER AIRPORT, MT US': 'FLATHEAD',\n",
+    "    'DILLON AIRPORT, MT US': 'BEAVERHEAD',\n",
+    "    'HAVRE AIRPORT ASOS, MT US': 'HILL'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df[\"COUNTY\"] = final_df[\"NAME\"].map(station_to_county)\n",
+    "final_df.to_csv(\"filtered_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aggregated weather data saved as time series for each variable.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aggregate_weather_data(weather_data, county_areas):\n",
+    "    # Step 1: Average weather readings per county per day\n",
+    "    county_avg_weather = weather_data.groupby([\"DATE\", \"COUNTY\"])[[\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]].mean().reset_index()\n",
+    "\n",
+    "    # Step 2: Merge with county area data\n",
+    "    county_avg_weather = county_avg_weather.merge(county_areas, on=\"COUNTY\", how=\"left\")\n",
+    "\n",
+    "    # Step 3: Compute weighted values\n",
+    "    for col in [\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]:\n",
+    "        county_avg_weather[f\"weighted_{col}\"] = county_avg_weather[col] * county_avg_weather[\"AREA\"]\n",
+    "\n",
+    "    # Step 4: Compute state-wide weighted averages per day\n",
+    "    state_weather = county_avg_weather.groupby(\"DATE\").apply(\n",
+    "        lambda x: pd.Series({col: x[f\"weighted_{col}\"].sum() / x[\"AREA\"].sum() for col in [\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]})\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    # Convert DATE to datetime format\n",
+    "    state_weather[\"DATE\"] = pd.to_datetime(state_weather[\"DATE\"])\n",
+    "\n",
+    "    # Step 5: Create separate time series DataFrames for each weather variable\n",
+    "    tmax_df = state_weather[[\"DATE\", \"TMAX\"]].rename(columns={\"TMAX\": \"State_Avg_TMAX\"})\n",
+    "    tmin_df = state_weather[[\"DATE\", \"TMIN\"]].rename(columns={\"TMIN\": \"State_Avg_TMIN\"})\n",
+    "    rhmn_df = state_weather[[\"DATE\", \"RHMN\"]].rename(columns={\"RHMN\": \"State_Avg_RHMN\"})\n",
+    "    rhmx_df = state_weather[[\"DATE\", \"RHMX\"]].rename(columns={\"RHMX\": \"State_Avg_RHMX\"})\n",
+    "\n",
+    "    # Ensure full date range from 2015-01-01 to 2024-12-31\n",
+    "    full_date_range = pd.date_range(start=\"2015-01-01\", end=\"2024-12-31\", freq=\"D\")\n",
+    "    \n",
+    "    def complete_timeseries(df, column_name):\n",
+    "        df = df.set_index(\"DATE\").reindex(full_date_range).rename_axis(\"Date\").reset_index()\n",
+    "        df = df.rename(columns={\"index\": \"Date\", column_name: column_name})\n",
+    "        return df\n",
+    "\n",
+    "    tmax_df = complete_timeseries(tmax_df, \"State_Avg_TMAX\")\n",
+    "    tmin_df = complete_timeseries(tmin_df, \"State_Avg_TMIN\")\n",
+    "    rhmn_df = complete_timeseries(rhmn_df, \"State_Avg_RHMN\")\n",
+    "    rhmx_df = complete_timeseries(rhmx_df, \"State_Avg_RHMX\")\n",
+    "\n",
+    "    return tmax_df, tmin_df, rhmn_df, rhmx_df\n",
+    "\n",
+    "# Load data\n",
+    "weather_data = pd.read_csv(\"filtered_data.csv\")  # Your cleaned weather dataset with COUNTY column\n",
+    "county_areas = pd.read_csv(\"MTcounties.csv\")  # County area dataset\n",
+    "\n",
+    "# Aggregate the data\n",
+    "tmax_series, tmin_series, rhmn_series, rhmx_series = aggregate_weather_data(weather_data, county_areas)\n",
+    "\n",
+    "# Save to CSV\n",
+    "tmax_series.to_csv(\"timeseries\\montana_tmax_timeseries.csv\", index=False)\n",
+    "tmin_series.to_csv(\"timeseries\\montana_tmin_timeseries.csv\", index=False)\n",
+    "rhmn_series.to_csv(\"timeseries\\montana_rhmn_timeseries.csv\", index=False)\n",
+    "rhmx_series.to_csv(\"timeseries\\montana_rhmx_timeseries.csv\", index=False)\n",
+    "\n",
+    "# Print confirmation\n",
+    "print(\"Aggregated weather data saved as time series for each variable.\")\n"
    ]
   }
  ],
