More timeseries extracted, tried some stuff on notebooks

--- a/snowfall_data_wrangling.ipynb
+++ b/snowfall_data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,15 +206,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the folder containing the CSV files\n",
-    "folder_path = \".\\montana_data_14_743_GoodStations\"\n",
+    "folder_path = \"data\\montana_data_14_743_GoodStations\"\n",
     "\n",
     "# Define the required columns\n",
-    "required_columns = [\"STATION\", \"DATE\", \"NAME\", \"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]\n",
+    "required_columns = [\"STATION\", \"DATE\", \"NAME\", \"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\",\"ADPT\",\"ASLP\",\"ASTP\"]\n",
     "\n",
     "# Define the date range\n",
     "start_date = \"2015-01-01\"\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,58 +297,60 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "def aggregate_weather_data(weather_data, county_areas):\n",
     "    # Step 1: Average weather readings per county per day\n",
-    "    county_avg_weather = weather_data.groupby([\"DATE\", \"COUNTY\"])[[\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]].mean().reset_index()\n",
+    "    weather_columns = [\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\", \"ADPT\", \"ASLP\", \"ASTP\"]\n",
+    "    county_avg_weather = weather_data.groupby([\"DATE\", \"COUNTY\"])[weather_columns].mean().reset_index()\n",
     "\n",
     "    # Step 2: Merge with county area data\n",
     "    county_avg_weather = county_avg_weather.merge(county_areas, on=\"COUNTY\", how=\"left\")\n",
     "\n",
     "    # Step 3: Compute weighted values\n",
-    "    for col in [\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]:\n",
+    "    for col in weather_columns:\n",
     "        county_avg_weather[f\"weighted_{col}\"] = county_avg_weather[col] * county_avg_weather[\"AREA\"]\n",
     "\n",
     "    # Step 4: Compute state-wide weighted averages per day\n",
     "    state_weather = county_avg_weather.groupby(\"DATE\").apply(\n",
-    "        lambda x: pd.Series({col: x[f\"weighted_{col}\"].sum() / x[\"AREA\"].sum() for col in [\"TMAX\", \"TMIN\", \"RHMN\", \"RHMX\"]})\n",
+    "        lambda x: pd.Series({\n",
+    "            col: x[f\"weighted_{col}\"].sum() / x[\"AREA\"].sum() for col in weather_columns\n",
+    "        })\n",
     "    ).reset_index()\n",
     "\n",
     "    # Convert DATE to datetime format\n",
     "    state_weather[\"DATE\"] = pd.to_datetime(state_weather[\"DATE\"])\n",
     "\n",
     "    # Step 5: Create separate time series DataFrames for each weather variable\n",
-    "    tmax_df = state_weather[[\"DATE\", \"TMAX\"]].rename(columns={\"TMAX\": \"State_Avg_TMAX\"})\n",
-    "    tmin_df = state_weather[[\"DATE\", \"TMIN\"]].rename(columns={\"TMIN\": \"State_Avg_TMIN\"})\n",
-    "    rhmn_df = state_weather[[\"DATE\", \"RHMN\"]].rename(columns={\"RHMN\": \"State_Avg_RHMN\"})\n",
-    "    rhmx_df = state_weather[[\"DATE\", \"RHMX\"]].rename(columns={\"RHMX\": \"State_Avg_RHMX\"})\n",
+    "    time_series = {}\n",
+    "    for col in weather_columns:\n",
+    "        time_series[col] = state_weather[[\"DATE\", col]].rename(columns={col: f\"State_Avg_{col}\"})\n",
     "\n",
     "    # Ensure full date range from 2015-01-01 to 2024-12-31\n",
     "    full_date_range = pd.date_range(start=\"2015-01-01\", end=\"2024-12-31\", freq=\"D\")\n",
-    "    \n",
+    "\n",
     "    def complete_timeseries(df, column_name):\n",
-    "        df = df.set_index(\"DATE\").reindex(full_date_range).rename_axis(\"Date\").reset_index()\n",
-    "        df = df.rename(columns={\"index\": \"Date\", column_name: column_name})\n",
+    "        df = df.set_index(\"DATE\").reindex(full_date_range).rename_axis(\"DATE\").reset_index()\n",
+    "        df = df.rename(columns={\"index\": \"DATE\", column_name: column_name})\n",
     "        return df\n",
     "\n",
-    "    tmax_df = complete_timeseries(tmax_df, \"State_Avg_TMAX\")\n",
-    "    tmin_df = complete_timeseries(tmin_df, \"State_Avg_TMIN\")\n",
-    "    rhmn_df = complete_timeseries(rhmn_df, \"State_Avg_RHMN\")\n",
-    "    rhmx_df = complete_timeseries(rhmx_df, \"State_Avg_RHMX\")\n",
+    "    # Apply completion function to all time series\n",
+    "    for col in weather_columns:\n",
+    "        time_series[col] = complete_timeseries(time_series[col], f\"State_Avg_{col}\")\n",
     "\n",
-    "    return tmax_df, tmin_df, rhmn_df, rhmx_df\n",
+    "    return time_series\n",
     "\n",
     "# Load data\n",
-    "weather_data = pd.read_csv(\"filtered_data.csv\")  # Your cleaned weather dataset with COUNTY column\n",
-    "county_areas = pd.read_csv(\"MTcounties.csv\")  # County area dataset\n",
+    "weather_data = pd.read_csv(\"filtered_data.csv\")  # Cleaned weather dataset with COUNTY column\n",
+    "county_areas = pd.read_csv(\"data/MTcounties.csv\")  # County area dataset\n",
     "\n",
     "# Aggregate the data\n",
-    "tmax_series, tmin_series, rhmn_series, rhmx_series = aggregate_weather_data(weather_data, county_areas)\n",
+    "weather_series = aggregate_weather_data(weather_data, county_areas)\n",
     "\n",
-    "# Save to CSV\n",
-    "tmax_series.to_csv(\"timeseries\\montana_tmax_timeseries.csv\", index=False)\n",
-    "tmin_series.to_csv(\"timeseries\\montana_tmin_timeseries.csv\", index=False)\n",
-    "rhmn_series.to_csv(\"timeseries\\montana_rhmn_timeseries.csv\", index=False)\n",
-    "rhmx_series.to_csv(\"timeseries\\montana_rhmx_timeseries.csv\", index=False)\n",
+    "# Save all time series to CSV\n",
+    "for var, df in weather_series.items():\n",
+    "    df.to_csv(f\"timeseries/montana_{var.lower()}_timeseries.csv\", index=False)\n",
     "\n",
     "# Print confirmation\n",
     "print(\"Aggregated weather data saved as time series for each variable.\")\n"
